2010-07-07  Ojan Vafai  <ojan@chromium.org>

Reviewed by Darin Adler.

        Regression: Selection anchor + focus swap when arrow keys after setBaseAndExtent
        https://bugs.webkit.org/show_bug.cgi?id=32605

        * editing/selection/5195166-1.html:
        * editing/selection/extend-forward-after-set-base-and-extent-expected.txt: Added.
        * editing/selection/extend-forward-after-set-base-and-extent.html: Added.
        * platform/mac/editing/selection/5195166-1-expected.txt:
2010-07-07  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Darin Adler.

        Regression: Selection anchor + focus swap when arrow keys after setBaseAndExtent
        https://bugs.webkit.org/show_bug.cgi?id=32605

        Only have selections be non-directional when they are set via the mouse.
        Otherwise, all selections are directional.

        Test: editing/selection/extend-forward-after-set-base-and-extent.html

        * WebCore.base.exp:
        * editing/SelectionController.cpp:
        (WebCore::SelectionController::setSelection):
        * editing/SelectionController.h:
        (WebCore::SelectionController::setSelection):
        * page/EventHandler.cpp:
        (WebCore::EventHandler::selectClosestWordFromMouseEvent):
        (WebCore::EventHandler::selectClosestWordOrLinkFromMouseEvent):
        (WebCore::EventHandler::handleMousePressEventTripleClick):
        (WebCore::EventHandler::handleMousePressEventSingleClick):
        (WebCore::EventHandler::updateSelectionForMouseDrag):

Canonical link: https://commits.webkit.org/53711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62816 268f45cc-cd09-0410-ab3c-d52691b4dbfc