WebCore/page/EventHandler.cpp
@@ -259,7 +259,7 @@ void EventHandler::selectClosestWordFromMouseEvent(const MouseEventWithHitTestRe
         }
         
         if (m_frame->shouldChangeSelection(newSelection))
-            m_frame->selection()->setSelection(newSelection, granularity);
+            m_frame->selection()->setSelection(newSelection, granularity, MakeNonDirectionalSelection);
     }
 }
 
@@ -284,7 +284,7 @@ void EventHandler::selectClosestWordOrLinkFromMouseEvent(const MouseEventWithHit
         }
 
         if (m_frame->shouldChangeSelection(newSelection))
-            m_frame->selection()->setSelection(newSelection, granularity);
+            m_frame->selection()->setSelection(newSelection, granularity, MakeNonDirectionalSelection);
     }
 }
 
@@ -329,7 +329,7 @@ bool EventHandler::handleMousePressEventTripleClick(const MouseEventWithHitTestR
     }
     
     if (m_frame->shouldChangeSelection(newSelection))
-        m_frame->selection()->setSelection(newSelection, granularity);
+        m_frame->selection()->setSelection(newSelection, granularity, MakeNonDirectionalSelection);
 
     return true;
 }
@@ -396,7 +396,7 @@ bool EventHandler::handleMousePressEventSingleClick(const MouseEventWithHitTestR
         newSelection = VisibleSelection(visiblePos);
     
     if (m_frame->shouldChangeSelection(newSelection))
-        m_frame->selection()->setSelection(newSelection, granularity);
+        m_frame->selection()->setSelection(newSelection, granularity, MakeNonDirectionalSelection);
 
     return true;
 }
@@ -633,7 +633,7 @@ void EventHandler::updateSelectionForMouseDrag(Node* targetNode, const IntPoint&
 
     if (m_frame->shouldChangeSelection(newSelection)) {
         m_frame->selection()->setIsDirectional(false);
-        m_frame->selection()->setSelection(newSelection, m_frame->selectionGranularity());
+        m_frame->selection()->setSelection(newSelection, m_frame->selectionGranularity(), MakeNonDirectionalSelection);
     }
 }
 #endif // ENABLE(DRAG_SUPPORT)
